[tool.poetry]
name = "cli-box"
version = "0.1.1"
description = "Add a box around your text for prettier CLIs"
authors = ["Ewen Le Bihan <ewen.lebihan7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
wcwidth = "^0.2.4"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
