[tool.poetry]
name = "cli-box"
version = "0.1.3"
description = "Add a box around your text for prettier CLIs"
authors = ["Ewen Le Bihan <ewen.lebihan7@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ewen-lbh/python-cli-box"

[tool.poetry.dependencies]
python = "^3.6"
wcwidth = "^0.2.4"
strip-ansi = "^0.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
